; ModuleID = '/home/carl/AnghaBench/h2o/lib/extr_http1.c_reqread_on_read.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/extr_http1.c_reqread_on_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.st_h2o_http1_conn_t* }
%struct.st_h2o_http1_conn_t = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32 (%struct.st_h2o_http1_conn_t*)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @reqread_on_read(%struct.TYPE_5__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.st_h2o_http1_conn_t*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %8 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %7, align 8
  store %struct.st_h2o_http1_conn_t* %8, %struct.st_h2o_http1_conn_t** %5, align 8
  %9 = load i8*, i8** %4, align 8
  %10 = icmp ne i8* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %13 = call i32 @close_connection(%struct.st_h2o_http1_conn_t* %12, i32 1)
  br label %30

14:                                               ; preds = %2
  %15 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %16 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %15, i32 0, i32 0
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %16, align 8
  %18 = icmp eq %struct.TYPE_4__* %17, null
  br i1 %18, label %19, label %22

19:                                               ; preds = %14
  %20 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %21 = call i32 @handle_incoming_request(%struct.st_h2o_http1_conn_t* %20)
  br label %30

22:                                               ; preds = %14
  %23 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %24 = getelementptr inbounds %struct.st_h2o_http1_conn_t, %struct.st_h2o_http1_conn_t* %23, i32 0, i32 0
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %25, i32 0, i32 0
  %27 = load i32 (%struct.st_h2o_http1_conn_t*)*, i32 (%struct.st_h2o_http1_conn_t*)** %26, align 8
  %28 = load %struct.st_h2o_http1_conn_t*, %struct.st_h2o_http1_conn_t** %5, align 8
  %29 = call i32 %27(%struct.st_h2o_http1_conn_t* %28)
  br label %30

30:                                               ; preds = %11, %22, %19
  ret void
}

declare dso_local i32 @close_connection(%struct.st_h2o_http1_conn_t*, i32) #1

declare dso_local i32 @handle_incoming_request(%struct.st_h2o_http1_conn_t*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
